--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "22.0.0"
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.punkabhiank.ramadanfoodlocations"
+        applicationId "com.ramadan.food"
         minSdkVersion 14
         targetSdkVersion 22
         versionCode 1
@@ -20,6 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.google.android.gms:play-services-maps:7.5.0'
+    compile 'com.google.android.gms:play-services-location:7.5.0'
+    compile 'com.rengwuxian.materialedittext:library:2.1.4'
+    compile 'com.parse.bolts:bolts-android:1.+'
+    compile files('libs/Parse-1.9.2.jar')
 }
